--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,9 @@ dependencies {
 
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
+	// 잭슨에서 프록시를 처리할 수 있도록
+	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-hibernate5'
+
 
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
