--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,10 @@ dependencies {
 	// 잭슨에서 프록시를 처리할 수 있도록
 	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-hibernate5'
 
+	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.8'
+
+
+
 
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
