--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,16 @@
+//querydsl 추가
+buildscript {
+	dependencies {
+		classpath("gradle.plugin.com.ewerk.gradle.plugins:querydsl-plugin:1.0.10")
+	}
+}
+
 plugins {
-	id 'org.springframework.boot' version '2.6.1'
-	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+	id 'org.springframework.boot' version '2.1.9.RELEASE'
 	id 'java'
 }
+apply plugin: 'io.spring.dependency-management'
+apply plugin: "com.ewerk.gradle.plugins.querydsl"
 
 group = 'jpabook'
 version = '0.0.1-SNAPSHOT'
@@ -13,34 +21,42 @@ configurations {
 		extendsFrom annotationProcessor
 	}
 }
-
 repositories {
 	mavenCentral()
 }
-
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-devtools'
-	implementation 'junit:junit:4.13.1'
-
-	implementation 'org.springframework.boot:spring-boot-starter-validation'
-
-	// 잭슨에서 프록시를 처리할 수 있도록
 	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-hibernate5'
-
-	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.8'
-
-
-
-
+	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test' //querydsl 추가
+	implementation 'com.querydsl:querydsl-jpa' //querydsl 추가
+	implementation 'com.querydsl:querydsl-apt'
 }
-
-test {
-	useJUnitPlatform()
+//querydsl 추가
+//def querydslDir = 'src/main/generated'
+def querydslDir = "$buildDir/generated/querydsl"
+querydsl {
+	library = "com.querydsl:querydsl-apt"
+	jpa = true
+	querydslSourcesDir = querydslDir
 }
+sourceSets {
+	main {
+		java {
+			srcDirs = ['src/main/java', querydslDir]
+		} }
+}
+compileQuerydsl{
+	options.annotationProcessorPath = configurations.querydsl
+}
+configurations {
+	querydsl.extendsFrom compileClasspath
+}
+ext["h2.version"] = "1.4.200" //h2 데이터베이스 버전 지정
+ext["hibernate.version"] = "5.4.20.Final"//하이버네이트 버전 지정
